--- a/stfile/config.yml
+++ b/stfile/config.yml
@@ -6,3 +6,4 @@ namespaces:
   rdfs: 'http://www.w3.org/2000/01/rdf-schema#'
   xml: 'http://www.w3.org/XML/1998/namespace#'
   xsd: 'http://www.w3.org/2001/XMLSchema#'
+  nfo: 'http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#'
