Resolve #5 Add services
Services will allow to add completeness to our graph when tagging nodes.
They take care of getting information from different sources and tag
nodes with richer information

Add services folder with file_format.py:
    Given a node it will use fleep in order to get meta information
    about the given file (if it can). Then, it will add that new
    information to the graph itself

Modify config.yml to add services list and which tags to listen
Modify tag in order to call those services for each given tag
Modify helpers to dynamically import action methods from services
Add services/* to MANIFEST.in
Add requirements file

--- a/stfile/config.yml
+++ b/stfile/config.yml
@@ -7,3 +7,8 @@ prefixes:
   xml: 'http://www.w3.org/XML/1998/namespace#'
   xsd: 'http://www.w3.org/2001/XMLSchema#'
   nfo: 'http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#'
+
+services:
+  file_format:
+    - nfo:FileDataObject
+
