Predicate objects as sets. Default file_format.py
Return predicate objects as a set instead of list.
Call by default file_format agent to get file_formats instead of regular
register with config.yml

--- a/stfile/config.yml
+++ b/stfile/config.yml
@@ -13,11 +13,9 @@ prefixes:
   geo: 'http://www.w3.org/2003/01/geo/wgs84_pos#'
 
 agents:
-  file_format:
-    - nfo:FileDataObject
-
   movies:
     - mov:Movie
+    - mov:TVShow
 
   music:
     - nfo:Audio
